# robot-game

./: .gitignore  CMakeLists.txt  ReadMe
Core/: CMakeLists.txt  genParsers.sh
Core/include/ChibiEngine/: Game.h  Handles.h  Utils.h
Core/schemas/: atlas.xsd  character.xsd  common.xsd  laf.xsd  resources_description.xsd  settings.xsd  shaders.xsd  user_interface.xsd  world.xsd
Core/src/: Game.cpp
Core/src/Clock/: Clock.cpp  ClockSystem.cpp  EventSystem.cpp
Core/src/Common/: EventSupportable.cpp  MathUtils.cpp  MatrixBuilder.cpp  ParserUtils.cpp  StringUtils.cpp
Core/src/GameState/: FpsCounter.cpp  GameState.cpp
Core/src/Input/: Input.cpp
Core/src/Logging/: Logger.cpp  LoggingSystem.cpp
Core/src/Physics/: CategoryReference.cpp  Physics.cpp
Core/src/Render/: Camera.cpp  Color.cpp  ScreenSystem.cpp  Shaders.cpp
Core/src/Resource/: FileSystem.cpp  LevelResources.cpp  Resources.cpp  Texture.cpp  font.cpp
Core/src/Script/: Script.cpp  ScriptsEventListener.hpp
Core/src/SkeletonAnimation/: Animation.cpp  InterpolationTransformTimeLine_Types.cpp  Skeleton.cpp  SkeletonDynamicGeometry.cpp  SkeletonJoint.cpp  SkeletonPicture.cpp  SkeletonSlot.cpp  SkeletonStaticGeometry.cpp  Transition_Types.cpp
Core/src/SoundSystem/: SoundSystem.cpp
Core/src/UserInterface/: Button.cpp  Checkbox.cpp  ContainerSelector.cpp  ContextMenu.cpp  Dialog.cpp  DropDownListBox.cpp  ElementCollection.cpp  Healthbar.cpp  Image.cpp  ImagePicker.cpp  InputField.cpp  LabelsList.cpp  LineContainer.cpp  LookAndFeel.cpp  Menu.cpp  RGBSlider.cpp  RadioButton.cpp  Slider.cpp  TableContainer.cpp  TextLabel.cpp  UIElement.cpp  UserInterface.cpp  UserInterfaceListener.cpp
Core/src/XMLParser/: AtlasParser.cpp  CharacterParser.cpp  CommonParser.cpp  LafParser.cpp  ResourcesDescriptionParser.cpp  SettingsParser.cpp  ShadersParser.cpp  UserInterfaceParser.cpp  WorldParser.cpp  util.cpp
Robot-Game/: CMakeLists.txt  genParsers.sh
Robot-Game/include/: AICharacter.h  CameraController.h  Character.h  CharacterReference.h  Layer.h  LightSource.h  Protagonist.h  RobotLevel.h  Weapon.h
Robot-Game/include/LevelObjects/: Box.h  DecorativeLevelObject.h  EventObject.h  FXObject.h  Ground.h  Interactive.h  Joint.h  LevelObject.h  Object3D.h  PhysLevelObject.h  PointObject.h  (+2 more)
Robot-Game/schemas/: robot_config.xsd
Robot-Game/src/: AICharacter.cpp  AIScripts.hpp  CameraController.cpp  Character.cpp  CharacterReference.cpp  Layer.cpp  LevelContactListener.cpp  LightSource.cpp  Protagonist.cpp  ProtagonistMove.cpp  RobotLevel.cpp  RobotScripts.hpp  Weapon.cpp  launcher.cpp
(+279 files in other folders)
